[package]
name = "rombender"
version = "0.0.1"
authors = ["Nick Price <nick@spun.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-config = "1.0"
#avr_delay = "0.3"
#avr-device = {version = "0.2", features = ["atmega64"]}
avr-std-stub = "1.0"
avrd = "0.3"
bit_reverse = {version = "0.1", default-features = false}

